<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.durgaindia.findurga.DurgaUserActivity" >

    <RelativeLayout
        android:id="@+id/initia_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone" >

        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/button_margin"
            android:text="@string/login_button_name" />

        <Button
            android:id="@+id/register"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignBottom="@+id/login"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/button_margin"
            android:text="@string/register_button_name" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/later_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome" />
        
        <TextView
            android:id="@+id/ListHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:layout_centerHorizontal="true"
            android:text="Nearest Durga List" />
        
        <ListView 
            android:id="@+id/durgaList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ListHeader"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/findDurga"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/find_durga" />
    </RelativeLayout>

</RelativeLayout>